; ModuleID = '/home/carl/AnghaBench/reactos/dll/directx/wine/wined3d/extr_glsl_shader.c_shader_glsl_append_sampler_binding_qualifier.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/directx/wine/wined3d/extr_glsl_shader.c_shader_glsl_append_sampler_binding_qualifier.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.wined3d_string_buffer = type { i32 }
%struct.wined3d_context = type { i32 }
%struct.wined3d_shader_version = type { i32 }

@WINED3D_UNMAPPED_STAGE = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [22 x i8] c"layout(binding = %u)\0A\00", align 1
@.str.1 = private unnamed_addr constant [22 x i8] c"Unmapped sampler %u.\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.wined3d_string_buffer*, %struct.wined3d_context*, %struct.wined3d_shader_version*, i32)* @shader_glsl_append_sampler_binding_qualifier to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @shader_glsl_append_sampler_binding_qualifier(%struct.wined3d_string_buffer* %0, %struct.wined3d_context* %1, %struct.wined3d_shader_version* %2, i32 %3) #0 {
  %5 = alloca %struct.wined3d_string_buffer*, align 8
  %6 = alloca %struct.wined3d_context*, align 8
  %7 = alloca %struct.wined3d_shader_version*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  store %struct.wined3d_string_buffer* %0, %struct.wined3d_string_buffer** %5, align 8
  store %struct.wined3d_context* %1, %struct.wined3d_context** %6, align 8
  store %struct.wined3d_shader_version* %2, %struct.wined3d_shader_version** %7, align 8
  store i32 %3, i32* %8, align 4
  %10 = load %struct.wined3d_context*, %struct.wined3d_context** %6, align 8
  %11 = load %struct.wined3d_shader_version*, %struct.wined3d_shader_version** %7, align 8
  %12 = load i32, i32* %8, align 4
  %13 = call i32 @shader_glsl_map_tex_unit(%struct.wined3d_context* %10, %struct.wined3d_shader_version* %11, i32 %12)
  store i32 %13, i32* %9, align 4
  %14 = load i32, i32* %9, align 4
  %15 = load i32, i32* @WINED3D_UNMAPPED_STAGE, align 4
  %16 = icmp ne i32 %14, %15
  br i1 %16, label %17, label %21

17:                                               ; preds = %4
  %18 = load %struct.wined3d_string_buffer*, %struct.wined3d_string_buffer** %5, align 8
  %19 = load i32, i32* %9, align 4
  %20 = call i32 @shader_addline(%struct.wined3d_string_buffer* %18, i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str, i64 0, i64 0), i32 %19)
  br label %24

21:                                               ; preds = %4
  %22 = load i32, i32* %8, align 4
  %23 = call i32 @ERR(i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str.1, i64 0, i64 0), i32 %22)
  br label %24

24:                                               ; preds = %21, %17
  ret void
}

declare dso_local i32 @shader_glsl_map_tex_unit(%struct.wined3d_context*, %struct.wined3d_shader_version*, i32) #1

declare dso_local i32 @shader_addline(%struct.wined3d_string_buffer*, i8*, i32) #1

declare dso_local i32 @ERR(i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
